--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -34,6 +34,14 @@ $shade-light: #fafafa;
 header {
   font-weight: bold;
   font-family: Arial;
+  nav {
+    max-height: 50px;
+    padding: 10px;
+    img {
+      max-height: 30px;
+    }
+  }
+ 
   span {
     letter-spacing: 0px;
     &.brand-first {
