--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -1,7 +1,3 @@
-$vue: #42b883;
-$vue-light: #42b883;
-$angular: #b52e31;
-$angular-light: #eb7a7c;
 $react: #00b3e6;
 $react-light: #61dafb;
 $primary: $react;
@@ -41,7 +37,7 @@ header {
       max-height: 30px;
     }
   }
- 
+
   span {
     letter-spacing: 0px;
     &.brand-first {
@@ -113,68 +109,141 @@ header {
     }
   }
 }
-ul.list {
-  box-shadow: none;
-}
-div.card-content {
-  background-color: $shade-light;
-  .name {
-    font-size: 28px;
-    color: #000;
-  }
-  .description {
-    font-size: 20px;
-    color: #999;
-  }
-  background-color: $shade-light;
-}
-.card {
-  margin-bottom: 2em;
-}
 
-label.label {
-  font-weight: normal;
-}
-
-p.card-header-title {
-  background-color: $primary;
-  text-transform: uppercase;
-  letter-spacing: 4px;
-  color: #fff;
-  display: block;
-  padding-left: 24px;
-}
-.card-footer button {
-  font-size: 16px;
-  i {
-    margin-right: 10px;
-  }
-  color: #888;
-  &:hover {
-    color: $link;
-  }
-}
-
-.modal-card-foot button {
-  display: inline-block;
-  width: 80px;
-}
-
-.modal-card-head,
-.modal-card-body {
+.rank-text {
+  font-size: 1.25rem;
   text-align: center;
 }
 
-.field {
-  margin-bottom: 0.75rem;
+.tag {
+  margin: 0 5px 5px 0;
 }
 
-.navbar-burger {
-  margin-left: auto;
-}
-
-button.link {
-  background: none;
+.progress {
+  &::-webkit-progress-bar {
+    background-color: #b52e31;
+  }
+  &::-webkit-progress-value {
+    background-color: #b52e31;
+  }
+  &::-moz-progress-bar {
+    background-color: #b52e31;
+  }
   border: none;
-  cursor: pointer;
+}
+
+.icon {
+  background-repeat: no-repeat;
+}
+
+.color-deathknight {
+  color: #c41f3b;
+}
+.color-demonhunter {
+  color: #a330c9;
+}
+.color-druid {
+  color: #ff7d0a;
+}
+.color-hunter {
+  color: #abd473;
+}
+.color-mage {
+  color: #69ccf0;
+}
+.color-monk {
+  color: #00ff96;
+}
+.color-paladin {
+  color: #f58cba;
+}
+.color-priest {
+  color: #ffffff;
+}
+.color-rogue {
+  color: #fff569;
+}
+.color-shaman {
+  color: #0070de;
+}
+.color-warlock {
+  color: #9482c9;
+}
+.color-warrior {
+  color: #c79c6e;
+}
+
+.icon-deathknight {
+  background-image: url(./images/classes/icon-deathknight.png);
+}
+.icon-demonhunter {
+  background-image: url(./images/classes/icon-demonhunter.png);
+}
+.icon-druid {
+  background-image: url(./images/classes/icon-druid.png);
+}
+.icon-hunter {
+  background-image: url(./images/classes/icon-hunter.png);
+}
+.icon-mage {
+  background-image: url(./images/classes/icon-mage.png);
+}
+.icon-monk {
+  background-image: url(./images/classes/icon-monk.png);
+}
+.icon-paladin {
+  background-image: url(./images/classes/icon-paladin.png);
+}
+.icon-priest {
+  background-image: url(./images/classes/icon-priest.png);
+}
+.icon-rogue {
+  background-image: url(./images/classes/icon-rogue.png);
+}
+.icon-shaman {
+  background-image: url(./images/classes/icon-shaman.png);
+}
+.icon-warlock {
+  background-image: url(./images/classes/icon-warlock.png);
+}
+.icon-warrior {
+  background-image: url(./images/classes/icon-warrior.png);
+}
+.icon-size-64 {
+  height: 64px;
+  width: 64px;
+  background-size: 64px;
+}
+
+table.table {
+  box-shadow: none;
+  background-color: inherit;
+  color: white;
+  thead {
+    th {
+      color: white;
+    }
+  }
+  tr {
+    th,
+    td {
+      &.rank {
+        width: 50px;
+        vertical-align: middle;
+      }
+      &.name {
+        padding: 15px;
+        width: 300px;
+      }
+      &.rating {
+        width: 50px;
+        vertical-align: middle;
+      }
+    }
+
+    color: white;
+    background-color: #363636;
+    margin-bottom: 10px;
+    padding: 10px;
+  }
 }
