--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -7,121 +7,9 @@ $link: $primary; // #00b3e6; // #ff4081;
 $shade-light: #fafafa;
 
 @import 'bulma/bulma.sass';
-
-.menu-list .active-link,
-.menu-list .router-link-active {
-  color: #fff;
-  background-color: $link;
-}
-
-.not-found {
-  i {
-    font-size: 20px;
-    margin-right: 8px;
-  }
-  .title {
-    letter-spacing: 0px;
-    font-weight: normal;
-    font-size: 24px;
-    text-transform: none;
-  }
-}
-
-header {
-  font-weight: bold;
-  font-family: Arial;
-  nav {
-    max-height: 50px;
-    padding: 10px;
-    img {
-      max-height: 30px;
-    }
-  }
-
-  span {
-    letter-spacing: 0px;
-    &.brand-first {
-      color: #fff;
-    }
-    &.brand-second {
-      color: #ccc;
-    }
-    &.brand-third {
-      color: $primary-light;
-    }
-  }
-  .navbar-item.nav-home {
-    border: 3px solid transparent;
-    border-radius: 0%;
-    &:hover {
-      border-right: 3px solid $primary-light;
-      border-left: 3px solid $primary-light;
-    }
-  }
-  .fab {
-    font-size: 24px;
-    &.js-logo {
-      color: $primary-light;
-    }
-  }
-  .buttons {
-    i.fab {
-      color: #fff;
-      margin-left: 20px;
-      margin-right: 10px;
-      &:hover {
-        color: $primary-light;
-      }
-    }
-  }
-}
-
-.edit-detail {
-  .input[readonly] {
-    background-color: $shade-light;
-  }
-  .input::placeholder {
-    color: #ccc;
-    font-style: italic;
-  }
-}
-
-.content-title-group {
-  margin-bottom: 16px;
-  h2 {
-    border-left: 16px solid $primary;
-    border-bottom: 2px solid $primary;
-    padding-left: 8px;
-    padding-right: 16px;
-    display: inline-block;
-    text-transform: uppercase;
-    color: #555;
-    letter-spacing: 0px;
-    &:hover {
-      color: $link;
-    }
-  }
-  button.button {
-    border: 0;
-    color: #999;
-    &:hover {
-      color: $link;
-    }
-  }
-}
-
-.rank-text {
-  font-size: 1.25rem;
-  text-align: center;
-}
-
 .tag {
   margin: 0 5px 5px 0;
 }
-
-
-
-
 
 .color-deathknight {
   color: #c41f3b;
@@ -163,6 +51,7 @@ header {
 
 
 table.table {
+  width: fit-content;
   box-shadow: none;
   background-color: inherit;
   color: white;
@@ -177,13 +66,17 @@ table.table {
       &.rank {
         width: 50px;
         vertical-align: middle;
+        text-align: center;
+        font-size: 1.25rem;
+        font-weight: bolder;
       }
       &.name {
         padding: 15px;
-        width: 350px;
+        width: 650px;
         padding-top: 20px;
       }
       &.arena-progress {
+        min-width: 200px;
         padding-top: 20px;
       }
       &.rating {
@@ -198,4 +91,8 @@ table.table {
     margin-bottom: 10px;
     padding: 10px;
   }
+}
+
+.right-side-bar {
+  color: white;
 }
