--- a/app/src/components/CharacterCard/character-detail.scss
+++ b/app/src/components/CharacterCard/character-detail.scss
@@ -1,25 +1,27 @@
 .character-detail {
+   font-size: 12px;
   .character-info-text {
     span {
-      margin-right: 2px;
+      margin-right: 1px;
     }
   }
 
   .character-name {
-    font-size: 1.3rem;
     font-weight: bold;
     
   }
   .character-title {
-    padding: 5px;
     border-right: solid 1px white;
-    max-width: 200px;
-    min-width: 200px;
+    max-width: 150px;
+    min-width: 150px;
+    > div {
+      min-height: .75rem;
+      padding-left: .25rem;;
+    }
   }
 
   .character-info {
-    padding: 10px;
-
+    padding-left: 1rem;
   }
 
   display: flex;
