--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -1,12 +1,52 @@
-$react: #00b3e6;
-$react-light: #61dafb;
-$primary: $react;
-$primary-light: $react-light;
-$link: $primary; // #00b3e6; // #ff4081;
+@import 'bulma/sass/utilities/initial-variables';
+@import 'bulma/sass/utilities/functions';
 
-$shade-light: #fafafa;
+// 2. Set your own initial variables
+// Update blue
+$blue: #0078ff;
+$link: #323233;
+$link-invet: #323233;
 
-@import 'bulma/bulma.sass';
+// Add a serif family
+$family-serif: 'Merriweather', 'Georgia', serif;
+
+// 3. Set the derived variables
+// Use the new pink as the primary color
+$primary: #323233;
+$text-strong: #fff;
+
+// Use the existing orange as the danger color
+$danger: #b30000;
+// Use the new serif family
+$family-primary: $family-serif;
+
+// 4. Setup your Custom Colors
+$linkedin: #0077b5;
+$linkedin-invert: findColorInvert($linkedin);
+$twitter: #55acee;
+$twitter-invert: findColorInvert($twitter);
+$github: #333;
+$github-invert: findColorInvert($github);
+
+// 5. Add new color variables to the color map.
+@import 'bulma/sass/utilities/derived-variables';
+$addColors: (
+  'twitter': (
+    $twitter,
+    $twitter-invert,
+  ),
+  'linkedin': (
+    $linkedin,
+    $linkedin-invert,
+  ),
+  'github': (
+    $github,
+    $github-invert,
+  ),
+);
+$colors: map-merge($colors, $addColors);
+
+@import 'bulma';
 
 .color-deathknight {
   color: #c41f3b;
@@ -45,8 +85,6 @@ $shade-light: #fafafa;
   color: #c79c6e;
 }
 
-
-
 table.table {
   width: fit-content;
   box-shadow: none;
@@ -81,10 +119,14 @@ table.table {
     }
 
     color: white;
-    background-color: #363636;
+    background-color: #323233 !important;
   }
 }
 
 .right-side-bar {
   color: white;
+}
+
+.has-background-dark {
+  background-color: #323233 !important;
 }
