--- a/app/src/components/ArenaProgress/arena-progress.scss
+++ b/app/src/components/ArenaProgress/arena-progress.scss
@@ -8,7 +8,7 @@
 }
 .progress {
   position: relative;
-  width: 100%;
+  width: 400px;
   height: 1rem;
   padding: 0;
   background-color: #f14668;
