--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -1,3 +1,12 @@
+@import 'bulma/bulma.sass';
+
+$color-horde: #e02929;
+$color-alliance: #69f;
+
+%brand {
+  font-size: 2rem;
+}
+
 .color-deathknight {
   color: #c41f3b;
 }
@@ -35,48 +44,23 @@
   color: #c79c6e;
 }
 
-table.table {
-  width: fit-content;
-  box-shadow: none;
-  background-color: inherit;
-  color: white;
-  thead {
-    th {
+header {
+  font-weight: bold;
+  font-family: Arial;
+  span {
+    letter-spacing: 0px;
+    &.brand-red {
+      @extend %brand;
+      color: $color-horde;
+    }
+    &.brand-blue {
+      @extend %brand;
+      color: $color-alliance;
+    }
+
+    &.brand-white {
+      @extend %brand;
       color: white;
     }
   }
-  tr {
-    th,
-    td {
-      &.rank {
-        width: 50px;
-        vertical-align: middle;
-        text-align: center;
-        font-size: 1.25rem;
-        font-weight: bolder;
-      }
-      &.name {
-        padding: 15px;
-        width: 500px;
-      }
-      &.arena-progress {
-        min-width: 100px;
-      }
-      &.rating {
-        width: 50px;
-        vertical-align: middle;
-      }
-    }
-
-    color: white;
-    background-color: #323233 !important;
-  }
-}
-
-.right-side-bar {
-  color: white;
-}
-
-.has-background-dark {
-  background-color: #323233 !important;
 }
